Several modifications in the proposal module. Revamped code

--- a/src/apps/ecidadania/proposals/templates/proposals/proposal_form_in_set.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposal_form_in_set.html
@@ -82,6 +82,7 @@ automatically if found in the data models.
                 </div>
             </div>
 
+            {% if "tags" in form_field %}
             <div class="control-group {% if form.tags.errors %}error{% endif %}">
                 <label class="control-label">{{ form.tags.label }}</label>
                 <div class="controls">
@@ -98,7 +99,8 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
-
+            {% endif %}
+            {% if "latitude" in form_field %}
             <div class="control-group {% if form.latitude.errors %}error{% endif %}">
                 <label class="control-label">{{ form.latitude.label }}</label>
                 <div class="controls">
@@ -115,7 +117,8 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
-
+            {% endif %}
+            {% if "longitude" in form_field %}
             <div class="control-group {% if form.longitude.errors %}error{% endif %}">
                 <label class="control-label">{{ form.longitude.label }}</label>
                 <div class="controls">
@@ -132,6 +135,7 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
+            {% endif %}
             <hr />
             <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
             <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Publish' %}" />
