--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -10,7 +10,7 @@
 <ul class="nav pull-right">
     <li class="dropdown">
     
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="{{ STATIC_URL }}/assets/flags/all_flag.png" alt="{% trans 'Language' %}" title="{% trans 'Language' %}" /><b class="caret"></b></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="{{ STATIC_URL }}/assets/flags/{{ request.LANGUAGE_CODE }}.gif" alt="{% trans 'Language' %}" title="{% trans 'Language' %}" /><b class="caret"></b></a>
         <ul class="dropdown-menu">
             {% for lang in LANGUAGES %}
                 <li>
