--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -178,6 +178,7 @@ div#table-container td.totals_header {
 }
 .list_formats img {
     padding: 1px;
+    cursor: pointer;
 }
 /* msg_list_empty */
 .empty {
