requests page, table styling
Signed-off-by: Erica <e@energy7.com>

--- a/private/templates/SandyRelief/views/index.html
+++ b/private/templates/SandyRelief/views/index.html
@@ -39,7 +39,7 @@
 			<h2>Welcome!</h2>		
 			<ol class="welcome-steps">
 				<li>Please read our <a href="">How-to Guide</a> for lots of tips from other organizers.</li>
-				<li>If you need help, see if anyone is in the <a href="">#SandyRelief</a> chat room, or <a href="">email us.</a></li>
+				<li>If you need help, see if anyone is in the <a href="http://irc.lc/freenode/sandyrelief">#SandyRelief</a> chat room, or <a href="">email us.</a></li>
 				<li>Thank you for donating your time!</li>
 			</ol>	
 		</div>
