SandyRelief Theme applied

--- a/static/themes/SandyRelief/sandy.less
+++ b/static/themes/SandyRelief/sandy.less
@@ -655,7 +655,7 @@ ol.counter {
 /* home pages */
 
 .home {
-	background: url('img/bg/520clinton.jpg') no-repeat center center fixed; 
+	background: url('img/520clinton.jpg') no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -853,13 +853,13 @@ ol.counter {
 
 .icon-comms {
 	.icon-large;
-	background: url(img/icons/comms.png) no-repeat;
+	background: url(img/comms.png) no-repeat;
 	margin-right: 5px;
 }
 
 .icon-dispatch {
 	.icon-large;
-	background: url(img/icons/dispatch.png) no-repeat;
+	background: url(img/dispatch.png) no-repeat;
 	margin-right: 5px;
 }
 
