style remaining visible pages
Signed-off-by: Erica <e@energy7.com>

--- a/private/templates/SandyRelief/views/help.html
+++ b/private/templates/SandyRelief/views/help.html
@@ -1,5 +1,5 @@
 {{extend "layout.html"}}
-<div id='home'>
+<div class='home'>
 <h2>{{=T("Help")}}</h2>
 <br>
 <h3>{{=T("Sandy Relief Project Support")}}</h3>
