--- a/private/templates/SandyRelief/views/index.html
+++ b/private/templates/SandyRelief/views/index.html
@@ -39,7 +39,7 @@
 			<h2>Welcome!</h2>		
 			<ol class="welcome-steps">
 				<!--<li>Please read our <a href="">How-to Guide</a> for lots of tips from other organizers.</li>-->
-				<li>If you need help, see if anyone is in the <a id="sandychat" href='http://sandyrelief.sahanafoundation.org:9090?nick={{="%s_%s_SR" % (s3_fullname(auth.user).replace(" ", "_"), s3db.org_site_represent(auth.user.site_id, show_link=False).replace(" ", "_"))}}&channels=SandyRelief' target='_blank' class='action-btn'>#SandyRelief</a> chat room, or <a href="/{{=appname}}/default/contact">email us.</a></li>
+				<li>If you need help, see if anyone is in the <a id="sandychat" href='http://sandyrelief.sahanafoundation.org:9090?nick={{="%s_%s_SR" % (s3_fullname(auth.user).replace(" ", "_"), s3db.org_site_represent(auth.user.site_id, show_link=False).replace(" ", "_"))}}&channels=SandyRelief' target='_blank'>#SandyRelief</a> chat room, or <a href="/{{=appname}}/default/contact">email us.</a></li>
 				<li>Thank you for donating your time!</li>
 			</ol>	
 		</div>
