--- a/private/templates/SandyRelief/views/footer.html
+++ b/private/templates/SandyRelief/views/footer.html
@@ -1,6 +1,6 @@
-<a href='/{{=appname}}/default/index/contact' class='action-btn'>HELP</a>
+<a href='/{{=appname}}/default/index/contact'>Help</a>
 {{if auth.is_logged_in():}}
-<a id="sandychat" href='http://sandyrelief.sahanafoundation.org:9090?nick={{="%s_%s_SR" % (s3_fullname(auth.user).replace(" ", "_"), s3db.org_site_represent(auth.user.site_id, show_link=False).replace(" ", "_"))}}&channels=SandyRelief' target='_blank' class='action-btn'>Online Chat</a>
+<a id="sandychat" href='http://sandyrelief.sahanafoundation.org:9090?nick={{="%s_%s_SR" % (s3_fullname(auth.user).replace(" ", "_"), s3db.org_site_represent(auth.user.site_id, show_link=False).replace(" ", "_"))}}&channels=SandyRelief' target='_blank'>Online Chat</a>
 {{s3.jquery_ready.append("$('#sandychat').click(function(){splitview($('#sandychat').attr('href'),'Help chat',0.4);return false})")}}
 {{pass}}
 <p id='poweredby'>
