--- a/views/timeline.html
+++ b/views/timeline.html
@@ -1,29 +1,33 @@
 {{extend "layout.html"}}
+<script>
+    var Timeline_ajax_url = '/{{=appname}}/static/scripts/simile/ajax/simile-ajax-api.js';
+    var Timeline_urlPrefix = '/{{=appname}}/static/scripts/simile/timeline/';
+    var Timeline_parameters = 'bundle=true';
+
+</script>
 {{try:}}{{=H2(title)}}
 {{except:}}{{pass}}
 <div id='rheader'>
 {{try:}}
  {{=rheader}}
- </div>
+  </div>
   <div id='component'>
 {{except:}}
   <div>
  {{pass}}
  {{try:}}{{=H3(subtitle)}}
  {{except:}}{{pass}}
+  <body onload="S3.timeline.onLoad();" onresize="S3.timeline.onResize();">
  <div id='map'></div>
- <div class='item-container'>
-  {{try:}}{{=item}}
-  {{except:}}{{pass}}
+      <div class='item-container' >         
+          {{try:}}{{=item}}
+          {{except:}}{{pass}}
+      </div>
+      </body>
   <p>{{=T("To move the Timeline: use the mouse scroll wheel, the arrow keys or grab and drag the Timeline.")}}</p>
- </div>
+ 
  {{try:}}{{=list_btn}}
  {{except:}}{{pass}}
  {{if s3.rfooter:}}<div id='rfooter'>{{=XML(s3.rfooter)}}</div>{{pass}}
-</div>
+      </div>
 {{# Need to be available before response.s3.scripts}}
-<script>
- var Timeline_ajax_url = '/{{=appname}}/static/scripts/simile/ajax/simile-ajax-api.js';
- var Timeline_urlPrefix = '/{{=appname}}/static/scripts/simile/timeline/';
- var Timeline_parameters = 'bundle=true';
-</script>
