--- a/static/themes/SandyRelief/sandy.less
+++ b/static/themes/SandyRelief/sandy.less
@@ -2,24 +2,41 @@
 /* compile locally with incident57.com/less/ and upload both */
 
 
-/******* TOC *******/
+/******* TABLE OF CONTENTS *******/
 
-/* Reset */
-/* Fonts */
-/* Mixins */
-/* Base */
-/* Layout */
-/* Modules */
-/* States */
-/* Theming */
-/* Browser Fixes */
-/* Responsive */
-/* Print */
+/* STARTER */
+/* reset */
+/* fonts */
+/* mixins */
+
+/* BASE */
+/* typography */
+/* links */
+/* layout */
+/* states */
+
+/* COMMON */
+/* navigation */
+/* forms */
+/* popups */
+/* tables */
+/* charts */
+/* icons */
+/* buttons */
+/* jquery */
+
+/* UNIQUE */
+/* home page */
+
+/* ADVANCED */
+/* browser fixes */
+/* responsive */
+/* print */
 
 
 
 
-/******* RESET *******/
+/******* STARTER *******/
 
 
 /* Eric Meyer's Reset Reloaded *//* http://meyerweb.com/eric/thoughts/2007/05/01/reset-reloaded/ */html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, font, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td {margin: 0;padding: 0;border: 0;outline: 0;font-size: 100%;vertical-align: baseline;background: transparent;}:focus {/* remember to define focus styles! */outline: 0;}body {line-height: 1;}ol, ul {list-style: none;}table {/* tables still need 'cellspacing="0"' in the markup */border-collapse: separate; border-spacing: 0;} caption, th, td {font-weight: normal; text-align: left;} blockquote:before, blockquote:after, q:before, q:after {content: "";} blockquote, q {quotes: "" "";}a img {border: 0;}article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}
@@ -40,7 +57,7 @@
 }
 
 
-/******* FONTS *******/
+/* fonts */
 
 
 @font-face {
@@ -89,14 +106,14 @@
 
 
 
-/******* MIXINS *******/
+/* mixins */
 
-/* colors */
 
 @brand: #FFCD67;
 @brandlight: #FFFDE9;
 @flag: #DA521F;
 @anchor: #0085BF;
+@confirm: #22B573;
 @black: #000000;
 @body: #222222;
 @shadeA: #555555;
@@ -127,8 +144,8 @@
 .fixer {content: "\0020"; display: block; height: 0; overflow: hidden;}
 .clearfix {
 	zoom: 1; 
-	&amp;:before {.fixer;}
-	&amp;:after {.fixer; clear: both;}
+	&:before {.fixer;}
+	&:after {.fixer; clear: both;}
 }
 
 
@@ -257,6 +274,7 @@ p {
 	margin: .5em 0 .5em;
 }
 
+
 h1 {font-size: 36px; .condensed;}
 h2 {font-size: 22px; .condensed;}
 h3 {font-size: 15px; font-weight: bold;}
@@ -265,8 +283,24 @@ h5 {font-size: 13px;}
 h6 {font-size: 12px;}
 p, label, li  {font-size: 15px;}
 
-.small, small {font-size: 12px; line-height: 1.2em;}
+small, .small {font-size: 12px; line-height: 1.2em;}
 .caps {text-transform: uppercase; letter-spacing: 1px; line-height: 1.2em;}
+
+
+ul {list-style: square;}
+ol {list-style-type: decimal;}
+ol ol {list-style: upper-alpha;}
+ol ol ol {list-style: lower-roman;}
+ol ol ol ol {list-style: lower-alpha;}
+
+ul ul, 
+ol ol, 
+ul ol, 
+ol ul {margin-bottom: 0;}
+
+dl {margin: 0;}
+dt {font-weight: 400;}
+dd {}
 
 
 blockquote {
@@ -331,14 +365,16 @@ hr {
 
 
 
+
+
 /* links */
 
 a, a:active, a:visited {
 	color: @anchor; 
 	text-decoration: none; 
 	cursor: pointer;
-	&amp;:focus, 
-	&amp;:hover {
+	&:focus, 
+	&:hover {
 		color: @shadeA; 
 	}
 }
@@ -366,7 +402,7 @@ button,
 	cursor: pointer;
 	-webkit-transition-property: background-color, color;
 	-webkit-transition-duration: 100ms;	
-	&amp;:hover {
+	&:hover {
 		background: @flag;
 		color: @white; 
 	}
@@ -375,52 +411,15 @@ button,
 
 
 
-/* lists */
-
-
-ul {
-	list-style: square;
-}
-ol {
-	list-style-type: decimal;
-}
-ol ol {
-	list-style: upper-alpha;
-}
-ol ol ol {
-	list-style: lower-roman;
-}
-ol ol ol ol {
-	list-style: lower-alpha;
-}
-ul ul, ol ol, ul ol, ol ul {
-	margin-bottom: 0;
-}
-dl {
-	margin: 0;
-}
-dt {
-	font-weight: 400;
-}
-dd {
-}
-
-
-
-
-/******* STATES *******/
+/* states */
 
 .is-disabled {
-    
+    color: @shadeC;
 }
 
-
-/******* THEME *******/
-
-.fullpage {
-    background: #EEE;
+.is-on-tab {
+	color: @flag;
 }
-
 
 .confirmation, .information, .error, .warning {
 	clear: left;
@@ -433,46 +432,38 @@ dd {
 	.box-shadow(0, 0, 8px, 0, @shadeA);
 	font-style: italic;
 	font-size: 15px;
-	border: 2px solid @flag;
+	border-width: 2px;
+}
+
+.confirmation {
+	color: @confirm;
+	border-color: @confirm;
+}
+
+.information {
+	color: @body;
+	border-color: @brand;
+}
+
+.error, 
+.warning {
 	color: @flag;
+	border-color: @flag;
 }
 
 
 
 
-ol.counter {
-	counter-reset: li;
-	margin: 2em 25px!important;
-	li {
-		position: relative;
-		padding-left: 24px;
-		border-bottom: 1px dotted #DDD;
-		list-style:none;
-		padding-top: .75em;
-		padding-bottom: 1em;
-		margin: 0!important;
-	}
-	li:first-child {
-		border-top: 1px dotted #DDD;
-	}
-	li:before {
-		content:counter(li);
-		counter-increment:li;
-		position:absolute;
-	    top: 12px;
+/* layout */
+
+
+.fullpage {
+    background: #EEE;
+    .col1 {
+	    width: 100%;
 	    left: 0;
-		font-size: 22px;
-		line-height: 20px;
-		font-weight: bold;
-		color: #BBB;	    
 	}
 }
-
-
-
-
-
-/******* LAYOUT *******/
 
 .colmask {
     margin-top: 55px;
@@ -490,14 +481,11 @@ ol.counter {
 	background: @shadeE;
 }
 
-
 .primary {
 	width: 75%;
 	float: right;
 	padding: 30px 0 40px;
 }
-
-
 
 .secondary {
 	width: 25%;
@@ -515,14 +503,33 @@ ol.counter {
 	}
 }
 
-
 .content {
 	width: 100%;
 }
 
+#component {
+	margin: 30px 0 60px;
+	border-left: 1px dashed @shadeD;
+	padding: 0 30px;
+	h2 {
+		font-size: 22px;
+		margin-top: 1.5em;
+	}
+	#delete-btn {
+		margin-bottom: 30px;
+	}
+}
 
-/* header and footer */
 
+
+
+/******* COMMON *******/
+
+
+/*** navigation ***/
+
+
+/* top nav */
 
 #modulenav {
 	.menu;
@@ -574,6 +581,7 @@ ol.counter {
             font-size: 12px;
             line-height: 1.2em;
             border-bottom: 1px dotted @shadeE;
+            margin: 0;
         }
         a {
             padding: 8px 15px 9px;
@@ -585,6 +593,32 @@ ol.counter {
 }
 
 
+/* drop down menus */
+
+#subnav {
+    padding: 15px;
+    div a {
+        .condensed;
+        font-size: 20px;
+        color: @body;
+        &:hover {
+            color: @anchor;
+        }
+    }
+    .submenu {
+        border-bottom: 1px solid @shadeE;
+        padding-bottom: 15px;
+        margin-bottom: 15px;
+        li {
+            font-size: 12px;
+            line-height: 1.2em;
+            margin-bottom: .5em;
+        }
+    }
+}
+
+
+/* bottom nav */
 
 
 #footer {
@@ -612,15 +646,12 @@ ol.counter {
 	}   
 }
 
-
 #footer div:last-child button {
-    display: none;
+    display: none;  /* hide extra buttons */
 }
 
 
 
-
-/******* MODULES *******/
 
 
 /* left nav */
@@ -630,27 +661,6 @@ ol.counter {
     background: @white;
 }
 
-#subnav {
-    padding: 15px;
-    div a {
-        .condensed;
-        font-size: 20px;
-        color: @body;
-        &amp;:hover {
-            color: @anchor;
-        }
-    }
-    .submenu {
-        border-bottom: 1px solid @shadeE;
-        padding-bottom: 15px;
-        margin-bottom: 15px;
-        li {
-            font-size: 12px;
-            line-height: 1.2em;
-            margin-bottom: .5em;
-        }
-    }
-}
 
 .rightside {
     margin-left: 240px;
@@ -663,66 +673,86 @@ ol.counter {
 }
 
 
-/* home pages */
 
-.home {
-	background: url('img/520clinton.jpg') no-repeat center center fixed; 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;		
-	width: 100%;
-	min-height: 600px;
-	float: none;
-	.clearfix;
-	padding-bottom: 100px;
-}
+/* tabs */
 
-.home-title {
-	width: 360px;
-	float: left;
-	padding: 0 20px;
-	h1 {
-		color: @white;
-		font-size: 72px;
-		line-height: 1em;
-		margin: 20px 0;
-		.text-shadow();
+.tabs {
+	margin: 30px 0 0;
+	span a {
+		padding: 5px 10px;
+		white-space: nowrap;
+		font-size: 12px;
+		background: white;
+		margin-right: 1px;
+		&:hover {
+			background: @shadeD;
+		}
+	}
+	.tab_here a {
+		background: @body!important;
+		color: @white!important;
+		cursor: default;
 	}
 }
 
 
 
-.home-register, 
-.home-content {
-	width: auto;
-	margin-left: 360px;
-	margin-right: 180px;
+/*** forms ***/
+
+.req, 
+.red {
+    color: @flag;
+    font-weight: normal;
 }
 
-.home-register {
-    padding: 20px 0 0;
-    width: 480px;
+b.red {
+	.small;
 }
 
-.login-box {
-    width: 100%;
-	background: @white;
-	background: rgba(255,255,255,.8);
-	padding: 30px;  
-	h2, h3 {
-    	.condensed;
-    	font-size: 36px;
-    	line-height: 1em;
-    	margin: 0;
-	}
-	h2 + .form-container {
-		margin-top: 20px;
-	}
+.login-box .req {
+	.small;
+    font-style: italic;
+}
+
+#password-strength {
+	.small;
+    margin-top: -10px;
+    margin-bottom: 15px;
+    font-style: italic;
+}
+
+
+.simple-form, 
+.advanced-form {
+	border-top: 1px solid @shadeC;
+	border-bottom: 1px solid @shadeC;
 	.w2p_fl {
-		padding-right: 10px;
+		width: auto!important;
+	}
+	input[type="text"] {
+		margin: 0;
+	}
+	#gis_search_map-btn,
+	input[type="submit"] {
+		margin: 0 10px 15px 0;
+		padding: 6px 15px 7px;
 	}
 }
+
+
+
+.s3-checkboxes-widget {
+	width: auto!important;
+	input[type="checkbox"] {
+		margin-top: 2px;
+	}
+	label {
+		font-size: 13px;
+		line-height: 1.2em;
+		margin-right: 20px;
+	} 
+}
+
 
 .form-container {
 	margin-top: 15px;
@@ -786,6 +816,8 @@ ol.counter {
 }
 
 
+/*** popups ***/
+
 #popup {
 	.form-container {
 		padding: 10px 20px;
@@ -824,131 +856,13 @@ ol.counter {
 }
 
 
-.req, 
-.red {
-    color: @flag;
-    font-weight: normal;
-}
-b.red {
-	.small;
-}
-
-.login-box .req {
-	.small;
-    font-style: italic;
-}
 
 
-
-#password-strength {
-	.small;
-    margin-top: -10px;
-    margin-bottom: 15px;
-    font-style: italic;
-}
-
-
-#login_form #register-btn {
-	margin-left: -15px;
-}
-
-#auth_user_remember__row label {
-	.small;
-}
-
-
-.home-content {
-	div {
-		background: @white;
-		background: rgba(255,255,255,.8);
-		padding: 30px;
-		margin-bottom: 20px;
-	}
-	h2 {
-		.condensed;
-		font-size: 36px;
-		margin: 0 0 15px;
-		line-height: 1em;
-	}
-}
-
-.comms {
-	width: 49%;
-	float: left;
-	margin-bottom: 100px;
-	.button {
-		margin-right: 10px;
-		margin-top: 10px;
-		padding: 10px 30px;
-	}
-}
-.dispatch {
-	width: 49%;
-	float: right;
-	.button {
-		margin-right: 10px;
-		margin-top: 10px;
-		padding: 10px 30px;
-	}
-}
-
-.welcome-steps {
-	margin: 0 30px;
-	li {
-		font-size: 18px;
-		margin-bottom: .75em;
-	}
-}
-
-
-
-.simple-form, 
-.advanced-form {
-	border-top: 1px solid @shadeC;
-	border-bottom: 1px solid @shadeC;
-	.w2p_fl {
-		width: auto!important;
-	}
-	input[type="text"] {
-		margin: 0;
-	}
-	#gis_search_map-btn,
-	input[type="submit"] {
-		margin: 0 10px 15px 0;
-		padding: 6px 15px 7px;
-	}
-}
-
-
-
-.s3-checkboxes-widget {
-	width: auto!important;
-	input[type="checkbox"] {
-		margin-top: 2px;
-	}
-	label {
-		font-size: 13px;
-		line-height: 1.2em;
-		margin-right: 20px;
-	} 
-}
+/*** tables ***/
 
 
 #table-container {
 	margin: 30px 0 60px;
-}
-
-#component {
-	margin: 30px 0 60px;
-	border-left: 1px dashed @shadeD;
-	padding: 0 30px;
-	h2 {
-		font-size: 22px;
-		margin-top: 1.5em;
-	}
-	#delete-btn {
-		margin-bottom: 30px;
-	}
 }
 
 #rheader {
@@ -962,25 +876,6 @@ b.red {
 	}
 }
 
-
-.tabs {
-	margin: 30px 0 0;
-	span a {
-		padding: 5px 10px;
-		white-space: nowrap;
-		font-size: 12px;
-		background: white;
-		margin-right: 1px;
-		&amp;:hover {
-			background: @shadeD;
-		}
-	}
-	.tab_here a {
-		background: @body!important;
-		color: @white!important;
-		cursor: default;
-	}
-}
 
 #last_update {
 	margin-right: 25px;
@@ -996,7 +891,6 @@ b.red {
 	}
 }
 
-/* tables */
 
 
 .dataTables_filter, 
@@ -1048,7 +942,11 @@ b.red {
 }
 
 
-/* icons */
+/*** charts ***/
+
+
+
+/*** icons ***/
 
 .icon-large {
 	.inlineBlock;
@@ -1070,7 +968,7 @@ b.red {
 
 
 
-/* buttons */
+/*** buttons ***/
 
 
 .action-lnk {
@@ -1097,11 +995,11 @@ b.red {
     padding: 4px 10px 5px;
     margin-right: 5px;
     white-space: nowrap;
-    &amp;:visited {
+    &:visited {
 	    color: @white!important;
     }
-    &amp;:hover, 
-    &amp;:focus {
+    &:hover, 
+    &:focus {
 	    color: @white!important;
 	    background: @body;
     }
@@ -1114,7 +1012,7 @@ b.red {
 	font-size: 12px;
 	.caps;
 	font-weight: bold;
-	&amp;:hover {
+	&:hover {
 		color: @body;
 	}
 }
@@ -1123,21 +1021,13 @@ b.red {
     .pictogram;
     padding-top: 2px;
     padding-bottom: 7px;
-}
-#show-add-btn:before {
-    content: "⊕";
-    font-size: 40px;
-    position: relative;
-    top: 5px;
-    left: -5px;
-}
-
-
-.edit-btn:before {
-    content: "✎";
-}
-.delete:before {
-    content: "⊖";
+	&:before {
+	    content: "⊕";
+	    font-size: 40px;
+	    position: relative;
+	    top: 5px;
+	    left: -5px;
+	}
 }
 
 #list-btn-add {
@@ -1148,7 +1038,7 @@ b.red {
 
 
 
-/* jquery styles */
+/*** jquery ***/
 
 
 .ui-widget-content {
@@ -1190,7 +1080,140 @@ b.red {
 
 
 
-/******* BROWSER FIXES *******/
+
+
+/******* UNIQUE *******/
+
+/*** home pages ***/
+
+.home {
+	background: url('img/520clinton.jpg') no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;		
+	width: 100%;
+	min-height: 600px;
+	float: none;
+	.clearfix;
+	padding-bottom: 100px;
+}
+
+.home-title {
+	width: 360px;
+	float: left;
+	padding: 0 20px;
+	h1 {
+		color: @white;
+		font-size: 72px;
+		line-height: 1em;
+		margin: 20px 0;
+		.text-shadow();
+	}
+}
+
+.home-register, 
+.home-content {
+	width: auto;
+	margin-left: 360px;
+	margin-right: 180px;
+}
+
+.home-register {
+    padding: 20px 0 0;
+    width: 480px;
+}
+
+.login-box {
+    width: 100%;
+	background: @white;
+	background: rgba(255,255,255,.8);
+	padding: 30px;  
+	h2, h3 {
+    	.condensed;
+    	font-size: 36px;
+    	line-height: 1em;
+    	margin: 0;
+	}
+	h2 + .form-container {
+		margin-top: 20px;
+	}
+	.w2p_fl {
+		padding-right: 10px;
+	}
+}
+
+#login_form #register-btn {
+	margin-left: -15px;
+}
+
+#auth_user_remember__row label {
+	.small;
+}
+#submit_record__row input {
+	margin-top: 20px;
+}
+
+.home .w2p_fl label {
+	white-space: nowrap;
+}
+.home .w2p_fw select {
+	max-width: 300px;
+}
+
+.home-content {
+	div {
+		background: @white;
+		background: rgba(255,255,255,.8);
+		padding: 30px;
+		margin-bottom: 20px;
+	}
+	h2 {
+		.condensed;
+		font-size: 36px;
+		margin: 0 0 15px;
+		line-height: 1em;
+	}
+}
+
+
+.welcome-steps {
+	margin: 0 30px;
+	li {
+		font-size: 18px;
+		margin-bottom: .75em;
+	}
+}
+
+.comms {
+	width: 49%;
+	float: left;
+	margin-bottom: 100px;
+	.button {
+		margin-right: 10px;
+		margin-top: 10px;
+		padding: 10px 30px;
+	}
+}
+
+.dispatch {
+	width: 49%;
+	float: right;
+	.button {
+		margin-right: 10px;
+		margin-top: 10px;
+		padding: 10px 30px;
+	}
+}
+
+
+
+
+
+
+/******* ADVANCED *******/
+
+/*** browser fixes ***/
 
 /* FF buttons: remove padding to vertically center text */
 input::-moz-focus-inner { 
@@ -1200,19 +1223,18 @@ input::-moz-focus-inner {
 
 
 
-/******* RESPONSIVE STYLING *******/
 
+
+/*** responsive ***/
 
 @media screen and (max-width: 720px) {
-
-
-	
 	
 }
 
 
 
-/******* PRINT *******/
+
+/*** print ***/
 
 @media print {
 	body {
@@ -1232,11 +1254,3 @@ input::-moz-focus-inner {
 	}
 }
 
-
-
-/** OVERRIDES **/
-
-.fullpage .col1 {
-    width: 100%;
-    left: 0;
-}
