SandyRelief: Fix CSS for OptionsWidgets in create forms, add /map method to Assessments menu

--- a/static/themes/SandyRelief/sandy.less
+++ b/static/themes/SandyRelief/sandy.less
@@ -752,8 +752,8 @@ b.red {
 	}
 }
 
-
-
+.generic-widget,
+.checkboxes-widget-s3,
 .s3-checkboxes-widget {
 	width: auto!important;
 	input[type="checkbox"] {
