Datatables fixed headers (#1261)

--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -146,7 +146,8 @@ table.dataTable thead th {
     border-bottom: 1px solid black;
 }
 
-div#table-container th {
+div#table-container th,
+div.fixedHeader th {
     text-align: center;
     border: 1px solid #ccc;
 }
@@ -254,6 +255,10 @@ a.paginate_active {
 }
 .sorting_disabled {
     background: no-repeat scroll right center transparent;
+}
+/* datatables fixed headers must not be transparent */
+table.dataTable th {
+    background: no-repeat scroll right center #F0F3F4;
 }
 table.dataTable .row_selected td {
 	background-color: #ddd;
