--- a/src/apps/ecidadania/debate/templates/debate/debate_view.html
+++ b/src/apps/ecidadania/debate/templates/debate/debate_view.html
@@ -22,7 +22,7 @@
 
     <div class="row">
         <div class="span6">
-            <p><strong>{% trans "Description:" %}</strong> {{ debate.description }}</p>
+            <p><strong>{% trans "Description:" %}</strong> {{ debate.description|safe }}</p>
             <p><strong>{% trans "Theme:" %}</strong> {{ debate.theme}}</p>
         </div>
         <div class="span6">
