Fixed #236 and a styling bug in the index page popovers

--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -61,6 +61,10 @@ hr { /* This hr replaces the bootstrap one */
     text-decoration: none;
 }
 
+.popover {
+    color: #222;
+}
+
 #logo {
     float: left;
     /* The logo image must be 75px height */
